first version of ru

--- a/lib/i18n/pt.json
+++ b/lib/i18n/pt.json
@@ -50,10 +50,9 @@
   },
   "units" : [
     {
-      "singular": "cento",
+      "singular": "сто",
       "useBaseInstead": true,
-      "useBaseException": [1],
-      "andException": true
+      "useBaseException": [1]
     },
     {
       "singular": "mil",
